--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <script type="importmap">
     {
       "imports": {
-        "main": "./script.js"
+        "main": "./script.js",
+        "stations": "./stations.js",
+        "sound-manager": "./sound-manager.js",
+        "player": "./player.js",
+        "ui": "./ui.js"
       }
     }
     </script>
